implemented get_all() and create_friend functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@ rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.css"
 rel="stylesheet"
 />
-    <title>Base MDB</title>
+    <title>First flask App with MySQL</title>
 </head>
 <body>
     {%include 'navbar.html' %}
