--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -100,7 +100,7 @@
           <ul
             class="dropdown-menu dropdown-menu-end"
             aria-labelledby="navbarDropdownMenuAvatar"
-          >
+          >login
             <li>
               <a class="dropdown-item" href="#">My profile</a>
             </li>
