--- a/templates/register.html
+++ b/templates/register.html
@@ -1,38 +1,18 @@
-{%extends 'base.html' %}
-
-{%block content %}
-<form class="w-50 mt-5">
-    <!-- Email input -->
-    <div class="form-outline mb-4">
-      <input type="text" id="form1Example1" class="form-control" />
-      <label class="form-label" for="form1Example1">First Name</label>
-    </div>
-    <div class="form-outline mb-4">
-        <input type="text" id="form1Example1" class="form-control" />
-        <label class="form-label" for="form1Example1">Last Name</label>
-      </div>
-      <div class="form-outline mb-4">
-        <input type="text" id="form1Example1" class="form-control" />
-        <label class="form-label" for="form1Example1">Occupation</label>
-      </div>
-  
-    <!-- 2 column grid layout for inline styling -->
-    <div class="row mb-4">
-      <div class="col d-flex justify-content-center">
-        <!-- Checkbox -->
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
-          <label class="form-check-label" for="form1Example3"> Remember me </label>
-        </div>
-      </div>
-  
-      <div class="col">
-        <!-- Simple link -->
-        <a href="#!">Already have an Account</a>
-      </div>
-    </div>
-  
-    <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block">Register</button>
-  </form>
+{% extends 'base.html' %} {%block content%}
+<h1>Add a Friend</h1>
+<form action="/create_friend" method="POST">
+  <div>
+    <label for="fname">First Name:</label>
+    <input type="text" name="fname" />
+  </div><br>
+  <div>
+    <label for="lname">Last Name:</label>
+    <input type="text" name="lname" />
+  </div><br>
+  <div>
+    <label for="occ">Occupation:</label>
+    <input type="text" name="occ" />
+  </div><br>
+  <input type="submit" value="Add Friend" />
+</form>
 {%endblock%}
