--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
-{%extends 'base.html' %}
+{% extends 'base.html' %}
 
-{%block content %}
-<h1>Welcome to the about flask page</h1>
+{%block content%}
+    <h1>Welcome to the about page</h1>
 {%endblock%}
