--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
-{%extends 'base.html' %}
+{% extends 'base.html' %}
 
-{%block content %}
-<h1>Welcome to the contact flask page</h1>
+{%block content%}
+    <h1>Welcome to the contact page</h1>
 {%endblock%}
