--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,30 @@
+{% extends 'base.html' %}
 
-    {%extends 'base.html' %}
-    {%block content%}
-    <div class="container mt-5">
-        <h1>Table of friends</h1>
-        <table class="table w-75">
-          <thead>
-            <tr>
-              <th scope="col">FriendID</th>
-              <th scope="col">First Name</th>
-              <th scope="col">Last Name</th>
-              <th scope="col">Occupation</th>
-            </tr>
-          </thead>
-          <tbody>
-            {%for friend in friends %}
-            <tr>
-              <th scope="row">{{friend.id}}</th>
-              <td>{{friend.first_name}}</td>
-              <td>{{friend.last_name}}</td>
-              <td>{{friend.occupation}}</td>
-            </tr>
-            {%endfor%}
-          </tbody>
-        </table>
-      </div>
-
-    {%endblock%}
+{%block content%}
+<h1>Table of all friends</h1>
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">FriendID</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Occupation</th>
+        <th scope="col">Join Date</th>
+        <th scope="col">Join Time</th>
+      </tr>
+    </thead>
+    <tbody>
+      {%for friend in friends%}
+        <tr>
+          <th scope="row">{{friend.id}}</th>
+          <td>{{friend.first_name}}</td>
+          <td>{{friend.last_name}}</td>
+          <td>{{friend.occupation}}</td>
+          <td>{{friend.created_at.strftime("%d %b,  %Y")}}</td>
+          <td>{{friend.created_at.strftime("%I: %M %p")}}</td>
+        </tr>
+      {%endfor%}
+      
+    </tbody>
+  </table>
+{%endblock%}
