--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
-{%extends 'base.html' %}
+{% extends 'base.html' %}
 
-{%block content %}
-<h1>Welcome to the login flask page</h1>
+{%block content%}
+    <h1>Welcome to the login page</h1>
 {%endblock%}
