--- a/templates/project.html
+++ b/templates/project.html
@@ -1,5 +1,5 @@
-{%extends 'base.html' %}
+{% extends 'base.html' %}
 
-{%block content %}
-<h1>Welcome to the projects flask page</h1>
+{%block content%}
+    <h1>Welcome to the projects page</h1>
 {%endblock%}
