--- a/templates/index.html
+++ b/templates/index.html
@@ -4,24 +4,30 @@
 <h1>Table of all friends</h1>
 <table class="table">
     <thead>
-      <tr>
+      <tr class="text-center">
         <th scope="col">FriendID</th>
         <th scope="col">First Name</th>
         <th scope="col">Last Name</th>
         <th scope="col">Occupation</th>
-        <th scope="col">Join Date</th>
-        <th scope="col">Join Time</th>
+        <th scope="col">Created on</th>
+        <th scope="col">Last Update</th>
+        <th scope="col">Actions</th>
       </tr>
     </thead>
     <tbody>
       {%for friend in friends%}
-        <tr>
+        <tr class="text-center">
           <th scope="row">{{friend.id}}</th>
           <td>{{friend.first_name}}</td>
           <td>{{friend.last_name}}</td>
           <td>{{friend.occupation}}</td>
-          <td>{{friend.created_at.strftime("%d %b,  %Y")}}</td>
-          <td>{{friend.created_at.strftime("%I: %M %p")}}</td>
+          <td>{{friend.created_at}}</td>
+          <td>{{friend.updated_at}}</td>
+          <td>
+            <a href="/friend/details/{{friend.id}}">details</a> |
+            <a href="/friend/edit/{{friend.id}}">edit</a>|
+            <a href="/friend/remove/{{friend.id}}">delete</a>
+          </td>
         </tr>
       {%endfor%}
       
